--- a/hermes-extension/popup.html
+++ b/hermes-extension/popup.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<html>
+  <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Hermes</title>
-
-</head>
-<body>
-    <h3>Hermes Extension</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptates animi eius in incidunt fugit saepe error quibusdam inventore veritatis!</p>
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            padding: 10px 10px 10px 10px;
+            min-width:200px;
+        }
+  </style>
+    <title>Soteria</title>
+  </head>
+  <body>
+      <!-- <img src='./Soteria_green.jpg' width="100" height="100" class="center"> -->
+    <h1 class="display-4 font-italic font-weight-bold">Soteria</h1>
     <fieldset>
         <label for="category">Category</label>
         <input type="text" class="form-control" name="category" id="category">
-        0 <input type="range" class="custom-range" min="0" max="100" step="5" value="85"> 100
+        </br>
+        Blur intensity (0-100)
+        <div> <input type="range" class="custom-range" min="0" max="100" step="5" value="85"> </div>
+
     </fieldset>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+
+   <script src="popup.js"></script>
+  </body>
 </html>
