--- a/hermes-extension/popup.html
+++ b/hermes-extension/popup.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Open Sans', sans-serif;
             padding: 10px 10px 10px 10px;
             min-width:200px;
         }
@@ -13,10 +14,22 @@
   </head>
   <body>
       <!-- <img src='./Soteria_green.jpg' width="100" height="100" class="center"> -->
-    <h1 class="display-4 font-italic font-weight-bold">Soteria</h1>
+    <h1 class="display-4 font-weight-bold text-secondary">Soteria</h1>
     <fieldset>
-        <label for="category">Category</label>
-        <input type="text" class="form-control" name="category" id="category">
+        <div id="loading">
+            <h6 class="text-center text-secondary">Please wait. We are making the page safe!</h6>
+            <div class="d-flex justify-content-center">   
+                <div class="spinner-border text-primary" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
+        </div>
+        <div id="done">
+                <h6 class="text-center text-secondary">The page is now safe!</h6>
+                <div class="d-flex justify-content-center">   
+                    <img src="images\checkmark_done_complete-512.png" alt="" height="40 px">
+                </div>
+            </div>
         </br>
         Blur intensity (0-100)
         <div> <input type="range" class="custom-range" min="0" max="100" step="5" value="85"> </div>
